--- a/source/index.html
+++ b/source/index.html
@@ -14,30 +14,57 @@
                 overflow: hidden;
             }
 
-            #loading {
+            .flex-centered {
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 width: 100%;
                 height: 100%;
-                background: black;
-                color: white;
-                font-weight: bold;
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
                 position: absolute;
                 top: 0;
                 left: 0;
                 margin: 0;
                 padding: 0;
                 border: 0;
+                flex-direction: column;
+            }
+
+            #loading {
+                background: black;
+                color: white;
+                font-weight: bold;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                text-shadow: 1px 1px 3px black;
+            }
+
+            #paused {
+                background: repeating-linear-gradient(
+                    45deg,
+                    rgba(0, 0, 0, 0.2),
+                    rgba(0, 0, 0, 0.2) 16px,
+                    rgba(0, 0, 0, 0.4) 16px,
+                    rgba(0, 0, 0, 0.4) 32px
+                );
+                color: white;
+                font-weight: bold;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                text-shadow: 1px 1px 3px black;
+            }
+
+            #screenshot-link {
+                display: none;
             }
         </style>
     </head>
     <body>
         <canvas id="canvas"></canvas>
-        <div id="loading">
+        <div class="flex-centered" id="loading">
             <h1>Loading ...</h1>
             <h2>This may take some time</h2>
         </div>
+        <div class="flex-centered" id="paused" style="display: none">
+            <h1>Rendering is paused.</h1>
+        </div>
+        <a id="screenshot-link"></a>
     </body>
 </html>
